styling/list-item and item-detail: make sure, words are brocken instead of overflowing - fixes #1098

--- a/liqd_product/assets/scss/components/_item_detail.scss
+++ b/liqd_product/assets/scss/components/_item_detail.scss
@@ -1,5 +1,6 @@
 .item-detail {
     margin-bottom: $spacer;
+    overflow-wrap: break-word;
 }
 
 .item-detail--bottom-divider {
@@ -32,6 +33,7 @@
 
 .item-detail__creator {
     margin-right: 0.5em;
+    word-break: break-word;
 }
 
 .item-detail__content {
