--- a/liqd_product/assets/scss/components/_list_item.scss
+++ b/liqd_product/assets/scss/components/_list_item.scss
@@ -6,6 +6,7 @@
     background-color: $body-bg;
     margin-bottom: $spacer;
     page-break-inside: avoid;
+    overflow-wrap: break-word;
 
     &.selected {
         background-color: $bg-secondary;
